# rust-cdc

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/delta/: helper.rs  mod.rs  value_buffer.rs  writer.rs
src/io/: buf.rs  buf_stream.rs  mod.rs  write_and_flush.rs
src/mysql/: conn.rs  error.rs  mod.rs
src/mysql/connection/: auth.rs  establish.rs  mod.rs  stream.rs
src/mysql/event/: decode.rs  format_des_event.rs  gtid_event.rs  mod.rs  previous_gtids_event.rs  query_event.rs  row.rs  table_map_event.rs  unknown_event.rs  xid_event.rs
src/mysql/protocol/: auth.rs  mod.rs  row.rs
src/mysql/protocol/connect/: auth_switch.rs  binlog_fp.rs  com_binlog_dump.rs  handshake.rs  handshake_response.rs  mod.rs
src/mysql/protocol/response/: eof.rs  err.rs  ok.rs
src/mysql/protocol/text/: mod.rs
src/net/: mod.rs  socket.rs
src/protocol/: mod.rs
src/protocol/connect/: handshake.rs  handshake_response.rs
src/protocol/response/: eof.rs  ok.rs
src/snapshot/: file_backend.rs  mod.rs  rocksdb_backend.rs
tests/: test.rs
tests/events/15_format_desc/: binlog.000002
tests/events/16_xid/: binlog.000002  dump.txt  sql.sql
tests/events/19_table_map/: mysql-bin.000002  sql.sql
tests/events/31_update_rows_v2/: mysql-bin.000001  sql.sql
tests/events/32_delete_rows_v2/: mysql-bin.000001  sql.sql
tests/events/gtid_prev_gtid/: README.md  mysql-bin.000001  sql.sql
