[package]
name = "rustcdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]


[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["fs"], optional = true }
bytes = { version = "1"}
bitflags = "1.3"
thiserror = "1.0.30"
memchr = { version = "2.4.1", default-features = false }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink"] }
digest = { version = "0.10.3", features = ["std"] }
generic-array = "0.14.6"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rsa = "0.6.1"
sha1 = "0.10.1"
sha2 = "0.10.2"
smallvec = "1.7.0"
bit-set = "0.5.3"
byteorder = "1"
uuid = "1"
serde_json = "1"
serde = {version = "1", features=["derive"] }
bigdecimal = { version="^0.3.0", features=["serde"] }
base64 = "0.13"
regex = "1.6.0"
